sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:15: error: not found: value tri
		if(tri)
                   ^